--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+appdirs==1.4.4
 beautifulsoup4==4.9.3
 boto3==1.17.3
 botocore==1.20.3
 certifi==2020.12.5
+filelock==3.0.12
 flatten-json==0.1.7
+idna==3.1
 jmespath==0.10.0
 lxml==4.6.2
 python-dateutil==2.8.1
 s3transfer==0.3.4
 six==1.15.0
 soupsieve==2.2
+uritools==3.0.0
+urlextract==1.2.0
 urllib3==1.26.3
