--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flatten-json==0.1.7
 idna==3.1
 jmespath==0.10.0
 lxml==4.6.2
+phonenumbers==8.12.19
 python-dateutil==2.8.1
 s3transfer==0.3.4
 six==1.15.0
